# php-mpos

./: .gitignore  Config-Settings.md  HELP.md  MPOS-Postsegwit.md  README.md
api/: openapi.yaml
backend/: README.md  go.mod  sqlc.yaml
cronjobs/: blockupdate.php  blockupdate_mm.php  findblock.php  findblock_mm.php  payouts.php  payouts_mm.php  pplns_payout.php  pplns_payout_mm.php  pps_payout_mm_multi.php  run-crons.sh  shared.inc.php
cronjobs-py/: .gitignore  README.md  pyproject.toml
cronjobs-py/cronjobs_py/: __main__.py  cache.py  db.py  drift.py  errors.py  logger.py  rpc.py  scheduler.py  settings.py  sse.py
cronjobs-py/cronjobs_py/jobs/: __init__.py  archive_cleanup.py  blockupdate.py  findblock.py  liquid_payout.py  notifications.py  payouts.py  pplns_payout.py  reconcile_payouts.py  statistics.py  tickerupdate.py  token_cleanup.py
cronjobs-py/tests/: conftest.py  test_balance_php_parity.py  test_minimum_share_id.py  test_outbox_state_machine.py  test_pplns_diff_normalised.py  test_pplns_idempotency.py  test_pplns_shares.py  test_rpc_nonidempotent.py  test_settings_config_merge.py  test_settings_slot_int.py  test_shadow_mode.py  test_statistics_cache_shape.py
deploy-bundle/: README.md  deploy-mainnet.sh  deploy-testnet.sh  deploy.sh
frontend/: README.md  account-edit.html  dashboard.html  invitations.html  news.html  notifications.html  package.json  qrcode.html  transactions.html  tsconfig.json  vite.config.ts  workers.html
ops/: apache-mpos-ssl.conf  backup.sh  eloipool-authentication-mpos.py  eloipool-mainnet.config.py.example  health-check.sh  (+4 more)
(+349 files in other folders)
