[project]
name = "cronjobs-py"
version = "0.1.0"
description = "MMP-style Python rewrite of MPOS PHP cronjobs — robust against block reorgs and transient RPC failures."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyMySQL>=1.1",
    "pymemcache>=4.0",
    "phpserialize>=1.3",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "needs_mariadb: test requires a running MariaDB on $CRONJOBS_PY_TEST_DSN",
]

[project.scripts]
cronjobs-py = "cronjobs_py.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cronjobs_py*"]
